apps/kyverno/timezone-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-timezone
spec:
  rules:
    - name: inject-tz-env
      skipBackgroundRequests: false
      match:
        any:
          - resources:
              kinds:
                - Pod
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "?*"
                env:
                  - name: TZ
                    value: Europe/Vienna
            initContainers:
              - (name): "?*"
                env:
                  - name: TZ
                    value: Europe/Vienna
